--- a/assets/css/templatemo-style.css
+++ b/assets/css/templatemo-style.css
@@ -13,7 +13,7 @@ body {
 }
 
 #page-wraper {
-    background: url(../images/page-bg.jpg) no-repeat center center fixed;
+    background: #1e1e1e no-repeat center center fixed;
     -webkit-background-size: cover;
     -moz-background-size: cover;
     -o-background-size: cover;
@@ -38,7 +38,14 @@ a,
 a:hover {
     text-decoration: none;
 }
-
+h6 a {
+    color: white;
+    border: 2px solid #8c363e;
+}
+h6 a:hover {
+    color: rgba(255, 255, 255, 0.5);
+    border: 2px solid #8c363e;
+}
 p {
     font-size: 16px;
     line-height: 24px;
@@ -136,14 +143,14 @@ html {
 }
 
 .menu .image img {
-    width: 140px;
-    height: 140px;
+    width: 160px;
+    height: 160px;
     border-radius: 50%;
     text-align: center;
 }
 
 .menu .author-content {
-    margin: 40px 0px 60px 0px;
+    margin: 40px 0px 30px 0px;
 }
 
 .menu .author-content h4 {
@@ -220,10 +227,10 @@ html {
 }
 
 .menu {
-    left: 10%;
+    left: 0%;
   -webkit-transition: -webkit-transform 233ms cubic-bezier(0, 0, 0.21, 1);
   -webkit-overflow-scrolling: touch;
-  background-color: #a43f49;
+  background-color: rgba(0, 0, 0, 0.5);
   box-sizing: border-box;
   height: 100vh;  
   max-height: 100vh !important;
@@ -285,9 +292,8 @@ html {
 
 .section {
     color: #fff;
-    width: 55%;
-    right: 10%;
-    left: 35%;
+    left: 5%;
+    width: 100%;
     position: relative;
     min-height: 100vh;
     padding-bottom: 80px;
@@ -295,8 +301,8 @@ html {
 }
 
 .section-heading {
-    text-align: center;
-    padding: 80px 45px;
+    text-align: right;
+    padding: 80px 0;
 }
 
 .section-heading h2 {
@@ -306,9 +312,10 @@ html {
 }
 
 .section-heading .line-dec {
-    width: 60px;
-    height: 3px;
-    background-color: #a43f49;
+    width: 100%;
+    height: 0px;
+    /* background-color: #a43f49; */
+    background-color: white;
     margin: 10px auto;
 }
 
@@ -319,7 +326,12 @@ html {
     letter-spacing: 0.5px;
 }
 
-
+.colored-text {
+    border-left: 5px solid rgba(164, 63, 73, 1);
+    background-color: transparent; /* Set your desired background color */
+    padding: 10px; /* Adjust the padding to control the colored area's width */
+    color: white; /* Set text color for contrast */
+  }
 /* Buttons */
 
 .white-button a {
@@ -404,6 +416,26 @@ button:hover {
     transition: all 0.5s;
 }
 
+/* .service-item.uni {
+    margin-bottom: 10px;
+    padding: 50px;
+    /* background: rgba(250, 250, 250, 0.1) url(../images/est.jpg) ; */
+    /* background-image: url(../images/est.jpg); */
+    /* background-color: rgba(250, 250, 250, 0.5); */
+    /* transition: all 0.5s; */
+/* }  */
+
+.image-uni {
+    opacity: 1;
+}
+.image-uni img {
+    height: 15rem;
+    width: 20rem;
+}
+.image-awa img {
+    height: 100px ;
+    width: 100px;
+}
 .service-item h4 {
     transition: all 0.5s;
 }
@@ -412,7 +444,7 @@ button:hover {
     transition: all 0.5s;
 }
 
-.service-item:hover {
+/* .service-item:hover {
     background-color: rgba(250, 250, 250, 1);
 }
 
@@ -422,7 +454,7 @@ button:hover {
 
 .service-item:hover p {
     color: #4a4a4a;
-}
+} */
 
 .service-item .service-icon {
     width: 70px;
@@ -469,7 +501,12 @@ button:hover {
 
 /* My Work */
 
-section.my-work .section-heading {
+section.my-work {
+    text-align: left;
+    padding: 80px 45px 50px 45px;
+}
+
+.section-heading {
     text-align: center;
     padding: 80px 45px 50px 45px;
 }
@@ -809,3 +846,128 @@ section.contact-me {
         margin-bottom: 20px;
     }
 }
+
+/* Timeline */
+.timeline {
+    position: relative;
+    max-width: 1200px;
+    margin: 0 auto;
+  }
+  
+  /* The actual timeline (the vertical ruler) */
+  .timeline::after {
+    content: '';
+    position: absolute;
+    width: 3px;
+    background-color: white;
+    top: 0;
+    bottom: 0;
+    left: 50%;
+    margin-left: -3px;
+  }
+  
+  /* Container around content */
+  .cnt {
+    padding: 10px 40px;
+    position: relative;
+    background-color: inherit;
+    width: 50%;
+  }
+  
+  /* The circles on the timeline */
+  .cnt::after {
+    content: '';
+    position: absolute;
+    width: 15px;
+    height: 15px;
+    right: -7px;
+    background-color: white;
+    border: 0px solid #FF9F55;
+    top: 15px;
+    border-radius: 50%;
+    z-index: 1;
+  }
+  
+  /* Place the container to the left */
+  .left {
+    left: 0;
+  }
+  
+  /* Place the container to the right */
+  .right {
+    left: 50%;
+  }
+  
+  /* Add arrows to the left container (pointing right) */
+  .left::before {
+    content: " ";
+    height: 0;
+    position: absolute;
+    top: 22px;
+    width: 0;
+    z-index: 1;
+    right: 30px;
+    border: medium solid white;
+    border-width: 10px 0 10px 10px;
+    border-color: transparent transparent transparent white;
+  }
+  
+  /* Add arrows to the right container (pointing left) */
+  .right::before {
+    content: " ";
+    height: 0;
+    position: absolute;
+    top: 22px;
+    width: 0;
+    z-index: 1;
+    left: 30px;
+    border: medium solid white;
+    border-width: 10px 10px 10px 0;
+    border-color: transparent white transparent transparent;
+  }
+  
+  /* Fix the circle for containers on the right side */
+  .right::after {
+    left: -16px;
+  }
+  
+  /* The actual content */
+  .cntent {
+    padding: 20px 30px;
+    background-color: white;
+    position: relative;
+    border-radius: 6px;
+  }
+  
+  /* Media queries - Responsive timeline on screens less than 600px wide */
+  @media screen and (max-width: 600px) {
+    /* Place the timelime to the left */
+    .timeline::after {
+    left: 31px;
+    }
+    
+    /* Full-width containers */
+    .cnt {
+    width: 100%;
+    padding-left: 7px;
+    padding-right: 5px;
+    }
+    
+    /* Make sure that all arrows are pointing leftwards */
+    .cnt::before {
+    left: 60px;
+    border: medium solid white;
+    border-width: 10px 10px 10px 0;
+    border-color: transparent white transparent transparent;
+    }
+  
+    /* Make sure all circles are at the same spot */
+    .left::after, .right::after {
+    left: 15px;
+    }
+    
+    /* Make all right containers behave like the left ones */
+    .right {
+    left: 0%;
+    }
+  }
