--- a/assets/css/templatemo-style.css
+++ b/assets/css/templatemo-style.css
@@ -150,7 +150,7 @@ html {
 }
 
 .menu .author-content {
-    margin: 40px 0px 30px 0px;
+    margin: 40px 0px 40px 0px;
 }
 
 .menu .author-content h4 {
@@ -164,7 +164,7 @@ html {
 }
 
 .menu .social-network {
-    margin-top: 60px;
+    margin-top: 40px;
 }
 
 .menu .social-network ul li {
@@ -292,8 +292,8 @@ html {
 
 .section {
     color: #fff;
-    left: 5%;
-    width: 100%;
+    left: 30%;
+    width: 60%;
     position: relative;
     min-height: 100vh;
     padding-bottom: 80px;
@@ -847,127 +847,81 @@ section.contact-me {
     }
 }
 
-/* Timeline */
+@import url('https://fonts.googleapis.com/css2?family=Jost:wght@200;300;400&display=swap');
+.design-section {
+  display: flex;
+  flex-direction: column;
+  align-items: center;
+  justify-content: center;
+  background-color: #1f1f1f;
+  min-height: 100vh;
+  padding: 0px 0;
+  font-family: Jost;
+}
+
+.design {
+  display: flex;
+  align-items: center;
+  justify-content: center;
+}
+
 .timeline {
-    position: relative;
-    max-width: 1200px;
-    margin: 0 auto;
+  width: 100%;
+  height: auto;
+  max-width: 800px;
+  margin: 0 auto;
+  display: flex;
+  flex-direction: column;
+}
+
+.timeline-content {
+  padding: 0px;
+  background: #000000;
+  -webkit-box-shadow: 5px 5px 10px #1a1a1a, -5px -5px 10px #242424;
+          box-shadow: 5px 5px 10px #1a1a1a, -5px -5px 10px #242424;
+  border-radius: 10px;
+  color: rgb(0, 0, 0);
+  padding: 7px;
+  transition: 0.4s ease;
+  overflow-wrap: break-word !important;
+  margin: 0rem;
+  margin-bottom: 0px;
+  border-radius: 10px;
+}
+
+.timeline-component {
+  margin: 0px 20px 0px 20px;
+}
+
+.timeline-content.timeline-component h6 {
+    font-size: 16px;
+    line-height: 20px;
+    color: #fff;
+}
+
+@media screen and (min-width: 768px) {
+  .timeline {
+    display: grid;
+    grid-template-columns: 1fr 3px 1fr;
   }
-  
-  /* The actual timeline (the vertical ruler) */
-  .timeline::after {
-    content: '';
-    position: absolute;
+  .timeline-middle {
+    position: relative;
+    background-image: linear-gradient(45deg, #F27121, #E94057, #8A2387);
     width: 3px;
-    background-color: white;
-    top: 0;
-    bottom: 0;
-    left: 50%;
-    margin-left: -3px;
+    height: 100%;
   }
-  
-  /* Container around content */
-  .cnt {
-    padding: 10px 40px;
-    position: relative;
-    background-color: inherit;
-    width: 50%;
+  .main-middle {
+    opacity: 0;
   }
-  
-  /* The circles on the timeline */
-  .cnt::after {
-    content: '';
+  .timeline-circle {
     position: absolute;
+    top: 0;
+    left: 50%;
     width: 15px;
     height: 15px;
-    right: -7px;
-    background-color: white;
-    border: 0px solid #FF9F55;
-    top: 15px;
     border-radius: 50%;
-    z-index: 1;
+    background-image: linear-gradient(45deg, #F27121, #E94057, #8A2387);
+    -webkit-transform: translateX(-50%);
+            transform: translateX(-50%);
   }
-  
-  /* Place the container to the left */
-  .left {
-    left: 0;
-  }
-  
-  /* Place the container to the right */
-  .right {
-    left: 50%;
-  }
-  
-  /* Add arrows to the left container (pointing right) */
-  .left::before {
-    content: " ";
-    height: 0;
-    position: absolute;
-    top: 22px;
-    width: 0;
-    z-index: 1;
-    right: 30px;
-    border: medium solid white;
-    border-width: 10px 0 10px 10px;
-    border-color: transparent transparent transparent white;
-  }
-  
-  /* Add arrows to the right container (pointing left) */
-  .right::before {
-    content: " ";
-    height: 0;
-    position: absolute;
-    top: 22px;
-    width: 0;
-    z-index: 1;
-    left: 30px;
-    border: medium solid white;
-    border-width: 10px 10px 10px 0;
-    border-color: transparent white transparent transparent;
-  }
-  
-  /* Fix the circle for containers on the right side */
-  .right::after {
-    left: -16px;
-  }
-  
-  /* The actual content */
-  .cntent {
-    padding: 20px 30px;
-    background-color: white;
-    position: relative;
-    border-radius: 6px;
-  }
-  
-  /* Media queries - Responsive timeline on screens less than 600px wide */
-  @media screen and (max-width: 600px) {
-    /* Place the timelime to the left */
-    .timeline::after {
-    left: 31px;
-    }
-    
-    /* Full-width containers */
-    .cnt {
-    width: 100%;
-    padding-left: 7px;
-    padding-right: 5px;
-    }
-    
-    /* Make sure that all arrows are pointing leftwards */
-    .cnt::before {
-    left: 60px;
-    border: medium solid white;
-    border-width: 10px 10px 10px 0;
-    border-color: transparent white transparent transparent;
-    }
-  
-    /* Make sure all circles are at the same spot */
-    .left::after, .right::after {
-    left: 15px;
-    }
-    
-    /* Make all right containers behave like the left ones */
-    .right {
-    left: 0%;
-    }
-  }
+}
