--- a/assets/css/templatemo-style.css
+++ b/assets/css/templatemo-style.css
@@ -460,6 +460,14 @@ button:hover {
     color: #4a4a4a;
 } */
 
+.section-head-image {
+    margin-top: 60px;
+    padding-top: 60px;
+    height: 50%;
+    border-top: 2px solid rgba(250, 250, 250, 0.1);
+
+}
+
 .service-item .service-icon {
     width: 70px;
     height: 70px;
